--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
                 alert("Erro ao buscar a cidade.");
             }
         }
+        window.onload = atualizarVibe;
     </script>
 </body>
 </html>
+
